# ohm-pet

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md
.github/workflows/: build.yml
assets/default-pets/ohm-raven/: pet.json
crates/ohm-pet-core/: Cargo.toml
crates/ohm-pet-core/examples/: validate_external.rs
crates/ohm-pet-core/src/: atlas.rs  behavior.rs  catalog.rs  config.rs  external.rs  lib.rs  state.rs
crates/ohm-pet-desktop/: Cargo.toml  build.rs
crates/ohm-pet-desktop/src/: agent_ipc.rs  channel_runtime.rs  channel_settings.rs  channels.rs  integrations.rs  lark_runtime.rs  macos_renderer.rs  main.rs  notifier.rs  task_tracker.rs  windows_renderer.rs
docs/: agent-integrations.md  agent-integrations.zh-CN.md  architecture.md  channel-development-plan.zh-CN.md  desktop-pet-research.md  external-pet-formats.md  external-pet-formats.zh-CN.md  pet-packages.md  pet-packages.zh-CN.md
packaging/macos/: Info.plist  OHMPet.icns
pets/jianjian/: pet.json
pets/ohm-suanni/: pet.json
pets/ohm-suanni-ivory-reliquary/: pet.json
scripts/: build-macos-app.sh  collect-external-pets.py  generate-icons.py  make-collection-archive.py  package-macos.sh  package-windows.ps1
