[workspace]
members = [
  "crates/ohm-pet-core",
  "crates/ohm-pet-desktop",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Dray"]

[workspace.dependencies]
anyhow = "1"
directories = "6"
image = { version = "0.25", default-features = false, features = ["webp", "png"] }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
