[workspace]
members = [
  "crates/ohm-pet-core",
  "crates/ohm-pet-desktop",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Dray"]

[workspace.dependencies]
anyhow = "1"
directories = "6"
encoding_rs = "0.8"
image = { version = "0.25", default-features = false, features = ["webp", "png", "qoi"] }
quick-xml = "0.37"
rand = "0.9"
tar = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
