[package]
name = "ohm-pet-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
directories.workspace = true
image.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
