[package]
name = "ohm-pet"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
directories.workspace = true
ohm-pet-core = { path = "../ohm-pet-core" }
rand.workspace = true
tray-icon = "0.21"
winit = "0.30"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging"] }
