[package]
name = "ohm-pet"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
directories.workspace = true
image.workspace = true
ohm-pet-core = { path = "../ohm-pet-core" }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
toml_edit = "0.22"
tray-icon = "0.21"
winit = "0.30"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"

[build-dependencies]
winres = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_HiDpi",
  "Win32_UI_WindowsAndMessaging",
] }
