[package]
name = "ohm-pet"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
directories.workspace = true
image.workspace = true
notify-rust = "4.11"
ohm-pet-core = { path = "../ohm-pet-core" }
prost = "0.13"
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
toml_edit = "0.22"
tray-icon = "0.21"
tungstenite = { version = "0.26", default-features = false, features = ["handshake", "native-tls"] }
ureq = { version = "3.1", default-features = false, features = ["json", "native-tls"] }
winit = "0.30"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.25"
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"

[build-dependencies]
winres = "0.1"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_HiDpi",
  "Win32_UI_WindowsAndMessaging",
] }
